<resources>
    <string name="app_name">Voucher</string>
    <string name="date_button_set">Set D.O.B</string>
    <string name="lmp_date_set">Set LMP DATE</string>
    <string name="part1_label">1.How many regular meals a day (With sadza/rice/potatoes or any other source of starch) does the household typically eat?</string>
    <string name="part2_label">2.What are the main sources of livelihood for the household?</string>
    <string name="part3_label">3.What is the average monthly remittances the household received from relatives or others during the last 12 months ?</string>
    <string name="part4_label">4.What percentage of your income goes to rent and rates?</string>
    <string name="part5_label">5.Is your water disconnected?</string>
    <string name="part6_label">6.Is your electricity disconnected?</string>
    <string name="part7_label">7.How many rooms are used for sleeping?</string>
    <string name="part8_label">8.What type of fuel does your household normally use for cooking?</string>
    <string name="part9_label">9.Main material of the house walls(Observe)</string>
    <string name="part10_label">10.What is the tenure status of the household?</string>
    <string name="part9_1">Natural or rudimentary (pole and dagga, makeshift,wood, cardboard, or metal?</string>
    <string name="part9_0">Finished wall (brick /stone with cement/lime?</string>
    <string name="part11_label">11.Does the household possess any of the following assets:Radio,television,refrigerator,bicycle,motorcycle,car or truck?</string>
    <string name="title_activity_login">Voucher</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
